--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://evgeny-nadymov.github.io/telegram-react",
-  "name": "telegram_react",
+  "homepage": "https://themukeshpatel.github.io/telegram-web/",
+  "name": "telegram-web",
   "version": "0.0.692",
   "private": true,
   "dependencies": {
